Fix Collapse with Collumns and define create item modal

--- a/frontend/src/components/Board.css
+++ b/frontend/src/components/Board.css
@@ -1,20 +1,9 @@
-:where(.css-dev-only-do-not-override-1dsqsww).ant-collapse .ant-collapse-content > .ant-collapse-content-box {
-  padding: 0;
-}
-
 :where(.css-dev-only-do-not-override-4ouft6).ant-space-gap-col-small {
-  column-gap: 0;
-  display: flex;
-  justify-items: stretch;
+  column-gap: 1px;
+  background-color: #D9D9D9;
+  overflow: hidden;
 }
 
-.ant-collapse .ant-collapse-item .ant-collapse-content-box {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-/* If you have a single item and want it to take full height */
-.panel-content {
-  flex-grow: 1;
+:where(.css-dev-only-do-not-override-4ouft6).ant-collapse .ant-collapse-content>.ant-collapse-content-box {
+  padding: 0;
 }
